feat: group endpoint in swagger with tags
